2007-02-19  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpbaseenums.[ch]: changed description for
	GIMP_INTERPOLATION_LANCZOS to "Sinc (Lanczos3)". More correct and
	more in sync with the other terms.

2007-02-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme.c (atom2str): use
	locale-independent function to convert a float value to a string.

2007-02-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/curve_bend.c
	* plug-ins/common/depthmerge.c
	* plug-ins/common/neon.c
	* plug-ins/common/nlfilt.c
	* plug-ins/common/pix.c
	* plug-ins/common/psd.c
	* plug-ins/common/spheredesigner.c
	* plug-ins/metadata/interface.c
	* plug-ins/pygimp/gimpmodule.c
	* plug-ins/pygimp/pygimp-pdb.c
	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu-server.c
	* plug-ins/xjt/xjpeg.c
	* plug-ins/xjt/xjt.c: use g_printerr() instead of fprintf().

2007-02-19  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin.c (gimp_plug_in_add_temp_proc)
	* app/plug-in/gimpplugindef.c (gimp_plug_in_def_add_procedure):
	remove duplicate procedures before adding the new one.
	
	* app/plug-in/gimpplugin-message.c
	(gimp_plug_in_handle_proc_install): don't remove duplicates here.

2007-02-19  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-types.h
	* app/plug-in/plug-in-def.[ch]: removed...

	* app/plug-in/gimpplugindef.[ch]: ...and added as object. Merged
	locale and help domain setters into one function each.

	* app/plug-in/gimpplugin-message.c
	* app/plug-in/gimpplugin.[ch]
	* app/plug-in/gimppluginmanager-call.[ch]
	* app/plug-in/gimppluginmanager-file.c
	* app/plug-in/gimppluginmanager.c
	* app/plug-in/plug-in-rc.c
	* tools/pdbgen/pdb/plug_in.pdb: changed accordingly.

	* app/pdb/plug_in_cmds.c: regenerated.

2007-02-18  Michael Natterer  <mitch@gimp.org>

	* app/text/gimptext-parasite.c
	* plug-ins/flame/libifs.c: use g_strtod() instead of atof()