@@ -1,5 +1,10 @@
 2007-02-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/psd_save.c: check the return value of
+	gimp_image_flatten(). Fixes the crash reported in bug #395385.
+
+2007-02-19  Sven Neumann  <sven@gimp.org>
+
 	* libgimpbase/gimpbaseenums.[ch]: changed description for
 	GIMP_INTERPOLATION_LANCZOS to "Sinc (Lanczos3)". More correct and
 	more in sync with the other terms.
